# geohexgrid

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: run_tests.yml  test.yml
geohex/: __init__.py  main.py
geohexgrid/: __init__.py  main.py  main_bak.py
hexgeo/: main.py
notebooks/: examples.ipynb  examples.py  prototyping.ipynb  prototyping.py  prototyping_2.ipynb
tests/: context.py  test_main.py
tests/data/: auckland.gpkg  hamilton_sa12018.gpkg  nz_tas.gpkg  shapes.geojson
