[tool.poetry]
name = "geohexgrid"
version = "2.0.0"
description = "A Python library for making geographic flat-top hexagon grids like QGIS's `create grid` function"
authors = ["Alex Raichev <araichev@mrcagney.com>"]
license = "MIT"
repository = "https://gitlab.com/mrcagney/geohexgrid"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9, <4"
geopandas = ">=0.11.1"
Rtree = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
black = ">=22.6.0"
pre-commit = ">=2.20.0"
nbstripout = ">=0.5.0"
pytest = ">=7.1.2"
ruff = ">=0.1.3"
pyogrio = ">=0.7.2"
matplotlib = ">=3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["F401", "F403"]
