[project]
name = "geohexgrid"
version = "2.1.2"
description = "A Python library for making geographic flat-top hexagon grids like QGIS's `create grid` function"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alex Raichev", email = "araichev@mrcagney.com" },
]
dependencies = [
    "geopandas>=0.11.1",
]

[project.urls]
Repository = "https://github.com/mrcagney/geohexgrid"

[tool.uv]
dev-dependencies = [
    "pre-commit-uv>=0.1",
    "nbstripout>=0.5.0",
    "pytest>=7.1.2",
    "ruff>=0.1.3",
    "matplotlib>=3.8.1",
    "loguru>=0.7.2",
    "marimo>=0.13.15",
]

[tool.ruff]
line-length = 90
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E501", "F401", "F403"]
exclude = ["notebooks/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["geohexgrid"]
